Commit Reject strategy and deduplication

--- a/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
+++ b/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
@@ -1087,6 +1087,56 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "12114213-81f3-4fa3-ab73-fd7bf5dddfb2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "%md\n",
+    "#####Rejection Strategy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0ea49fd0-b76f-4ce7-bce7-251db59ec0c2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.types import *\n",
+    "strcut1=StructType([StructField('id', IntegerType(), True), StructField('firstname', StringType(), True), StructField('lastname', StringType(), True), StructField('age', ShortType(), True), StructField('profession', StringType(), True),StructField(\"corruptedrows\",StringType())])\n",
+    "cleaneddf1=spark.read.schema(strcut1).csv(\"/Volumes/telecom_catalog_assign/landing_zone/landing_vol/BreadButter/\",mode='permissive')\n",
+    "display(cleaneddf1)\n",
+    "corrupted_data_set=cleaneddf1.where(\"corruptedrows is not NULL\")\n",
+    "corrupted_data_set.write.csv(\"/Volumes/telecom_catalog_assign/landing_zone/landing_vol/BreadButter/rejected_data\",header=True,mode='overwrite')\n",
+    "retained_data=cleaneddf1.where(\"corruptedrows is NULL\")\n",
+    "print(\"Overall rows in the source data is \",len(cleaneddf1.collect()))\n",
+    "print(\"Rejected rows in the source data is \",len(corrupted_data_set.collect()))\n",
+    "print(\"Clean rows in the source data is \",len(retained_data.collect()))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "c58eebba-1c51-47a1-a0f3-10532360b269",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -1094,8 +1144,10 @@
     }
    },
    "source": [
-    "#####Cleansing\n",
-    "It is a process of cleaning/removing/deleting unwanted data"
+    "#####Cleansing \n",
+    "na.drop()<br>\n",
+    "It is a process of cleaning/removing/deleting unwanted data\n",
+    "Eg. I am purchasing potato from a shop, I am cutting down the debris/rotten portion of it"
    ]
   },
   {
@@ -1121,13 +1173,17 @@
     "cleanseddf1=rawdf4.na.drop(how=\"any\")#It drops (removes) any row from rawdf1 that has at least one null value in any column ===== any\" means:Drop the row if ANY column in that row is null\n",
     "#cleanseddf = rawdf1.na.drop(how=\"all\")#Drop only if ALL columns are null\n",
     "#rawdf1.na.drop(subset=[\"id\", \"name\"])#Drop based on specific columns\n",
+    "print(\"any one row in the rawdf4 with age null\")\n",
+    "display(rawdf4.where(\"age is null\"))\n",
+    "print(\"any one row in the cleansed df with age null\")\n",
+    "display(cleanseddf1.where(\"age is null\"))\n",
     "print(\"After Drop the row if ANY column in that row is null:\", cleanseddf1.count())\n",
     "display(rawdf4.where('age is NULL')) #here age column has some NULL values\n",
     "display(cleanseddf1.where('age is null')) #Here No rows are returned because on the DF we arlready did na.drop()\n",
     "cleanseddf2=rawdf4.na.drop(how=\"any\",subset=['id','age'])\n",
-    "print(\"After removing subset:\",cleanseddf2.count())\n",
+    "print(\"After removing subset:\",len(cleanseddf2.collect()))\n",
     "cleanseddf3=rawdf4.na.drop(how=\"all\",subset=[\"lastname\",\"profession\"])\n",
-    "print(\"After removing subset and all:\",cleanseddf3.count())\n"
+    "print(\"After removing subset and all:\",len(cleanseddf3.collect()))\n"
    ]
   },
   {
@@ -1146,9 +1202,10 @@
     }
    },
    "source": [
-    "%md\n",
-    "#####Scrubbing\n",
-    "It is a process of polishing/fine tuning/scrubbing/meaningful conversion the data in a usable format\n"
+    "#####Scrubbing \n",
+    "na.fill() & na.replace()<br>\n",
+    "It is a process of polishing/fine tuning/scrubbing/meaningful conversion the data in a usable format\n",
+    "Eg. I am purchasing potato from a shop, I am scrubbing/washing mud/sand portion of it"
    ]
   },
   {
@@ -1174,7 +1231,96 @@
     "df1=rawdf4.na.fill({\"firstname\":\"unkown\",\"lastname\":\"unkown\"})#Replace nulls with a fixed value.\n",
     "#display(df1)\n",
     "df2=rawdf4.fillna('NA',subset=[\"firstname\"])\n",
-    "display(df2)"
+    "display(df2)\n",
+    "find_replace_values_dict1={'Pilot':'Captain','Actor':'Celeberity'}\n",
+    "find_replace_values_dict2={'not provided':'NA'}\n",
+    "scrubbeddf2=rawdf4.na.replace(find_replace_values_dict1,subset=[\"profession\"])#fill function is helping us find and replace the values\n",
+    "display(scrubbeddf2)\n",
+    "scrubbeddf3=rawdf4.na.replace(find_replace_values_dict2,subset=[\"lastname\"])\n",
+    "display(scrubbeddf3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7114abf8-bef3-4222-9456-c158b7ab8037",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#####DeDuplication\n",
+    "Removal of duplicate rows/columns based on a priority or non priority\n",
+    "distinct & dropDuplicates\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b86b8eff-0c38-47ba-936b-f836ddf15e04",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.types import *\n",
+    "strcut1=StructType([StructField('id', IntegerType(), True), StructField('firstname', StringType(), True), StructField('lastname', StringType(), True), StructField('age', ShortType(), True), StructField('profession', StringType(), True),StructField(\"corruptedrows\",StringType())])\n",
+    "cleaneddf1=spark.read.schema(strcut1).csv(\"/Volumes/telecom_catalog_assign/landing_zone/landing_vol/BreadButter/\",mode='permissive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "331887c0-f532-4031-a7b8-b561bbd2849a",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "1": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1767025171963}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 1
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(cleaneddf1.where(\"id in (4000001)\"))#before row level dedup\n",
+    "row_dup_removed=cleaneddf1.distinct()#It will remove the row level duplicates\n",
+    "display(row_dup_removed.where(\"id in (4000001)\"))\n",
+    "\n",
+    "print(\"non prioritized deduplication, just remove the duplicates retaining only the first row\")\n",
+    "#row_dup_removed=cleaneddf1.distinct():-At this stage, the DataFrame may be distributed across multiple partitions.\n",
+    "#.coalesce(1) Reduces the number of partitions in the DataFrame to 1.coalesce(1) forces all data into a single partition.\n",
+    "display(row_dup_removed.coalesce(1).where(\"id in ('4000003')\"))#before col level dedup\n",
+    "colmn_dup_removed=row_dup_removed.coalesce(1).dropDuplicates([\"id\"])#It will remove the column level duplicates (retaining the first row in the dataframe)\n",
+    "display(colmn_dup_removed.coalesce(1).where(\"id in ('4000003')\"))\n",
+    "\n",
+    "print(\"prioritized deduplication based on age\")\n",
+    "display(row_dup_removed.coalesce(1).where(\"id in ('4000003')\"))\n",
+    "colmn_dup_removed1=row_dup_removed.coalesce(1).orderBy(['id','age'],ascending=[True,False]).dropDuplicates(['id'])\n",
+    "display(colmn_dup_removed1.coalesce(1).where(\"id in ('4000003')\"))"
    ]
   }
  ],
