Commit(merge schema and schema evaluation def add)

--- a/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
+++ b/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
@@ -693,6 +693,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "05326ec0-8318-4e9e-846b-78a04f194d8f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "%md\n",
+    "**When do we go for Schema Evolution?**<br>\n",
+    "Over the time, if no. of col are keep added by source<br>\n",
+    "Serialization  while writing+ mergeSchema while reading<br>\n",
+    "**When do we go for Schema Merging?**<br>\n",
+    "In a given day, If we get multiple files of related (not same) structure<br>\n",
+    "After reading in dataframe format -> unionByName + allowMissingColumns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
