--- a/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
+++ b/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
@@ -685,7 +685,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0fa3036d-28d3-49b2-9d69-20f8867537bc",
      "showTitle": false,
@@ -1121,7 +1124,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "37bc578f-54ca-40ff-8c11-9f553a52a29c",
      "showTitle": false,
@@ -2660,6 +2666,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e23f788b-c38e-4261-a88e-ef776dfce324",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Once data is already in memory, push-down optimization NO LONGER applies.<br>\n",
+    "Pushdown works only during READ<br>\n",
+    "After that, it is in-memory execution optimization.<br>\n",
+    "\n",
+    "df10 = spark.read.parquet(\"/data/customers\")<br>\n",
+    "At this point:<br>\n",
+    "df10 is not loaded yet<br>\n",
+    "It is only a logical plan<br>\n",
+    "Spark is lazy.<br>\n",
+    "\n",
+    "Data is loaded only when an ACTION is called:<br>\n",
+    "selectdf.show()<br>\n",
+    "selectdf.count()<br>\n",
+    "\n",
+    "At that moment:<br>\n",
+    "Spark reads data from storage<br>\n",
+    "Pushdown may happen<br>\n",
+    "\n",
+    "Case 1: Push Down (During Read)<bt>\n",
+    "df = spark.read.parquet(\"/data/customers\") \\\n",
+    "        .select(\"custid\", \"Age\") \\\n",
+    "        .where(\"Age > 30\")\n",
+    "\n",
+    "👉 Spark pushes:<bt>\n",
+    "column selection<bt>\n",
+    "filter condition<br>\n",
+    "\n",
+    "👉 Less data enters memory<br>\n",
+    "This is true push-down optimization<br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -2921,7 +2974,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "11772989-2b18-47a3-b209-78d4b791361c",
      "showTitle": false,
@@ -2959,7 +3015,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "abb3f755-6609-4eed-9341-9462f6f7e578",
      "showTitle": false,
@@ -2971,7 +3030,14 @@
     "#####6. Limit\n",
     "Let us take an oppurtunity to understand different data limiting/restricting functions<br>\n",
     "**Limit** is a dataframe TRANSFORMATION functions used to limit the number of rows returned in a spark dataframe FORMAT<br>\n",
-    "**Take** is a dataframe/RDD ACTION functions used to limit the number of rows returned in a python list FORMAT"
+    "---\n",
+    "**Take** is a dataframe/RDD ACTION functions used to limit the number of rows returned in a python list FORMAT<br>\n",
+    "---\n",
+    "**display** is a standard output databricks specific function used to produce entire DF/List output in a notebook view with multiple options <br>\n",
+    "---\n",
+    "**show** is a standard output spark dataframe specific function used to produce default 20 rows of a DF output in a notebook/REPL/IDE view <br>\n",
+    "\n",
+    "**collect** is a spark action that help us collect the DF/RDD data into the driver environment in a form of python list <br>"
    ]
   },
   {
@@ -3000,6 +3066,136 @@
     "#I have to filter some data in a limited dataset of 100 rows\n",
     "curateddf5.limit(100).filter(\"professio='Accountant'\").show()\n",
     "#curateddf5.take(100).filter(\"professio='Accountant'\").show()--it returns list so filter can not be applied"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "16c4b017-3195-42cb-b582-d74a5febd021",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##5. Data Wrangling - More of Analytics + Transformation<br>\n",
+    "Taking raw, scattered, incomplete data and transforming it into a clean, enriched, analytics-ready dataset\n",
+    "  1. Joins - Relation/Connection established between one or more datasets/df/tabl to produce the broader/extended view of the data horizontally.\n",
+    "  5 Categories of Joins:\n",
+    "  inner, outer(left\n",
+    "  right, full), self, cross, special optimized (semi, anti)\n",
+    "  2. Lookup\n",
+    "  3. Lookup & Enrichment\n",
+    "  4. Schema Modeling  (Denormalization)\n",
+    "  5. Windowing\n",
+    "  6. Analytical\n",
+    "  7. Set operations\n",
+    "  8. grouping & aggregations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "356bc795-a17a-44e7-855c-1fb8c12be5c3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "![Screenshot 2026-01-06 191933.png](./Screenshot 2026-01-06 191933.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "567d7abf-9a79-4342-99aa-fd26f9514b62",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#####1. Joins\n",
+    "Joins are Relation/connection of one or more tables to perform widened (horizontal) data analytics<br>\n",
+    "A join connects two or more datasets using a common key to produce a wider dataset (more columns).<br>\n",
+    "1. Frequently used simple joins (inner, left)\n",
+    "2. InFrequent simple joins (self, right, full, cartesian)\n",
+    "3. Advanced joins (Semi and Anti)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "767cac49-2ba3-4529-84d3-dddd87486956",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#How to write join syntax in Spark and learn the semantics of join in spark\n",
+    "rawdf1=spark.read.csv(\"/Volumes/telecom_catalog_assign/landing_zone/landing_vol/BreadButter/\",header=False,inferSchema=True).toDF(\"ID\",\"FName\",\"LName\",\"Age\",\"profession\")\n",
+    "rawdf1=rawdf1.na.drop().where(\"id<>'ten' and id<>'trailer_data:end of file'\")\n",
+    "leftdf=rawdf1.where(\"id in (4000100,4000101)\")\n",
+    "rightdf=rawdf1.where(\"id in (4000100,4000102,4000103)\")\n",
+    "leftdf.show(20,False)\n",
+    "rightdf.show(20,False)\n",
+    "print(\"Inner Join\")\n",
+    "innerjoindf=leftdf.join(rightdf,how='inner',on='ID')\n",
+    "innerjoindf.show(20)\n",
+    "print(\"LEFT JOIN\")\n",
+    "leftjoin=leftdf.join(rightdf,how='left',on='ID')\n",
+    "leftjoin.show(20)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "97c9ae2f-672d-4910-bb54-408e574bf7fc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"RIGHT JOIN\")\n",
+    "rightjoin=leftdf.join(rightdf,how='right',on='ID')\n",
+    "rightjoin.display()"
    ]
   }
  ],
