Commit Lookup data analysis

--- a/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
+++ b/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
@@ -3135,11 +3135,12 @@
    },
    "source": [
     "#####1. Joins\n",
-    "Joins are Relation/connection of one or more tables to perform widened (horizontal) data analytics<br>\n",
-    "A join connects two or more datasets using a common key to produce a wider dataset (more columns).<br>\n",
+    "Joins are Relation/connection of one or more tables to perform widened (horizontal) data analytics\n",
     "1. Frequently used simple joins (inner, left)\n",
     "2. InFrequent simple joins (self, right, full, cartesian)\n",
-    "3. Advanced joins (Semi and Anti)"
+    "3. Advanced joins (Semi and Anti)<br>\n",
+    "Syntax - dfleft.join(dfright,how='typeofjoin',on='custid'=='cid')\n",
+    "4. Optimized joins (Broadcast join, SMB Join, Shuffle hash join, Map/Reduceside join, Skewed join etc.)-AQE (Adaptive Query Execution)"
    ]
   },
   {
@@ -3371,7 +3372,7 @@
     "\n",
     "#We need to bring transaction detailed (Quantifying/Fact) data upto curated state (we need to follow all/any/none of the steps that we followed so far munged, enriched, customized, curated, wrangle etc., depends on the EDA result)\n",
     "strt1=StructType([StructField('txnid', IntegerType(), True), StructField('txndt', StringType(), True), StructField('custid', IntegerType(), True), StructField('amt', DoubleType(), True), StructField('category', StringType(), True), StructField('product', StringType(), True), StructField('city', StringType(), True), StructField('state', StringType(), True), StructField('spendby', StringType(), True)])\n",
-    "traxrawdf=spark.read.schema(strt1).csv(\"/Volumes/telecom_catalog_assign/landing_zone/landing_vol/BreadButter/txns_2025.txt\",header=False)\n",
+    "traxrawdf=spark.read.schema(strt1).csv(\"/Volumes/telecom_catalog_assign/landing_zone/landing_vol/BreadButter/trxtxt/txns_2025.txt\",header=False)\n",
     "traxrawdf.show(5,False)\n",
     "traxrawdf.printSchema()\n",
     "display(traxrawdf.summary())\n",
@@ -3406,7 +3407,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "15e79b58-9ebb-4587-b27d-9aa3e0109f92",
      "showTitle": false,
@@ -3473,7 +3477,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3d4d8f73-fedb-419a-8174-0c273041ffc1",
      "showTitle": false,
@@ -3524,7 +3531,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "439d491f-6bb2-4103-857a-7ad98473b20e",
      "showTitle": false,
@@ -3564,7 +3574,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "8928506a-856e-4d88-8c8d-e651c200de13",
      "showTitle": false,
@@ -3644,7 +3657,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "dd01ab4d-b5af-471b-a948-37bb487113ca",
      "showTitle": false,
@@ -3703,6 +3719,179 @@
     "denormalized_fat_wide_df=custdimdf.join(txnsdecdf,how='full',on='custid')\n",
     "denormalized_fat_wide_df.show(2)\n",
     "print(denormalized_fat_wide_df.count())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e5cf1178-b843-4ee7-9e70-5ad89843a5f7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#####4.Windowing Functionalities\n",
+    "Is the concept of grouping/bucketize/dividing/partitioning and performing some analytical operation on the literally partitioned data\n",
+    "Benifits of Windowing Functionality\n",
+    "1. Creating Surrogate/primary key/seq number\n",
+    "2. Performing Top N Analysis\n",
+    "3. Duplicate Handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "aaffe882-be4b-497e-bbcd-5fb16fed7e26",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.window import Window\n",
+    "from pyspark.sql.functions import row_number\n",
+    "denormalized_fat_wide_df=custdimdf.join(txnsdecdf,how='inner',on='custid')\n",
+    "print(denormalized_fat_wide_df.count())\n",
+    "orderjoineddf=denormalized_fat_wide_df.where(\"custid in (4000022,4000816)\").select(\"custid\",\"Age\",\"Professio\",\"txndt\",\"amt\",\"category\",\"product\",\"city\",\"state\",\"spendby\")\n",
+    "display(orderjoineddf)\n",
+    "\n",
+    "#We are using row_number() window function (very important)\n",
+    "#Synax for windowing function\n",
+    "#from pyspark.sql.window import Window\n",
+    "#select(row_number().over(Window.partitionBy(\"custid\").orderBy(\"txndt\"))).alias(\"seqnum\"))\n",
+    "\n",
+    "#1.Creating Surrogate/primary key/seq number\n",
+    "#Let us perform a non windowing operation that means we are not using partitioning\n",
+    "sk_orderjoinedf=orderjoineddf.withColumn(\"seqnum\",row_number().over(Window.orderBy(\"custid\",\"txndt\")))\n",
+    "display(sk_orderjoinedf)\n",
+    "\n",
+    "#2. Performing Top N Analysis\n",
+    "#Let us perform windowing operation\n",
+    "#Interview Questions pattern:\n",
+    "print(\"a. Tell me the top 1 transaction made by the customer\")\n",
+    "sk_orderjoinedf=orderjoineddf.withColumn(\"seqnum\",row_number().over(Window.partitionBy(\"custid\").orderBy(desc('amt')))).where(\"seqnum=1\")\n",
+    "display(sk_orderjoinedf)\n",
+    "\n",
+    "print(\"b. Tell me the least 1 transaction made by the customer\")\n",
+    "sk_orderjoinedf=orderjoineddf.withColumn(\"seqnum\",row_number().over(Window.partitionBy(\"custid\").orderBy('amt'))).where(\"seqnum=1\")\n",
+    "display(sk_orderjoinedf)\n",
+    "\n",
+    "print(\"c. Tell me the top 2 transaction made by the customer\")\n",
+    "sk_orderjoinedf=orderjoineddf.withColumn(\"seqnum\",row_number().over(Window.partitionBy(\"custid\").orderBy(desc(\"amt\")))).where(\"seqnum<=2\")\n",
+    "display(sk_orderjoinedf)\n",
+    "\n",
+    "print(\"d. Tell me the just the 2nd highest transaction made by the customer\")\n",
+    "sk_orderjoinedf=orderjoineddf.withColumn(\"seqnum\",row_number().over(Window.partitionBy(\"custid\").orderBy(desc(\"amt\")))).where(\"seqnum=2\")\n",
+    "display(sk_orderjoinedf)\n",
+    "\n",
+    "\n",
+    "print(\"e. Tell me the just the 2nd highest transaction made by the customer within the given state\")\n",
+    "sk_orderjoinedf=orderjoineddf.withColumn(\"seqnum\",row_number().over(Window.partitionBy(\"custid\",\"state\").orderBy(desc(\"amt\")))).where(\"seqnum=2\")\n",
+    "display(sk_orderjoinedf)\n",
+    "\n",
+    "\n",
+    "print(\"f. Show me the very first time the business made by the given customers?\")\n",
+    "sk_orderjoinedf=orderjoineddf.withColumn(\"seqnum\",row_number().over(Window.partitionBy(\"custid\").orderBy(\"txndt\"))).where(\"seqnum=1\")\n",
+    "display(sk_orderjoinedf)\n",
+    "\n",
+    "print(\"g. Show me the very first two transaction made by the given customers?\")\n",
+    "sk_orderjoinedf=orderjoineddf.withColumn(\"seqnum\",row_number().over(Window.partitionBy(\"custid\").orderBy(\"txndt\")))\\\n",
+    ".where(\"seqnum<=2\")\n",
+    "display(sk_orderjoinedf)\n",
+    "\n",
+    "\n",
+    "#3. Duplicate Handling\n",
+    "#I want to remove duplicates based on custid with same spendby (for a given customer i need only one credit and one cash transaction info)\n",
+    "print(\"I want to get the duplicate custid with the same spendby removed out from our data?\")\n",
+    "#display(sk_orderjoinedf.coalesce(1).dropDuplicates([\"custid\",\"spendby\"]))\n",
+    "sk_orderjoinedf=orderjoineddf.withColumn(\"seqnum\",row_number().over(Window.partitionBy(\"custid\",\"spendby\").orderBy(desc(\"txndt\"))))\n",
+    "display(sk_orderjoinedf)\n",
+    "display(sk_orderjoinedf.where(\"seqnum=1\"))\n",
+    "\n",
+    "#but if amt is same for 2 transaction of diff dates? - rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "928fea42-a0f1-4425-bc99-84414af27804",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Second important window functions are rank() - used for applying same rank for same values and will have gaps (don't maintain continuity) \n",
+    "# and dense_rank() - used for applying same rank for same values and will not have gaps (maintain denser/close continuity) \n",
+    "print(\"a. Tell me the just the 2nd highest transaction made by the customer\")\n",
+    "sk_orderjoinedf=orderjoineddf.withColumn(\"rnk\",rank().over(Window.partitionBy(\"custid\").orderBy(desc(\"spendby\")))).withColumn(\"densernk\",dense_rank().over(Window.partitionBy(\"custid\").orderBy(desc(\"spendby\"))))\n",
+    "display(sk_orderjoinedf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bdb9d356-60c1-4408-b3bd-4a6558f84769",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#####5.Analytical Functionalities\n",
+    "Performing analytics/summarization/categorization of data by applying/not by applying windowing functionality."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "027f2ee4-7da7-46e7-af19-a518fda56c65",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Comparitive analytics - lead & lag\n",
+    "sk_orderjoinedf=orderjoineddf.withColumn(\"nexttransamt\",lead(\"amt\",1,0).over(Window.partitionBy(\"custid\").orderBy(asc(\"txndt\")))).withColumn(\"priortransamt\",lag(\"amt\",1,0).over(Window.partitionBy(\"custid\").orderBy(asc(\"txndt\"))))\n",
+    "display(sk_orderjoinedf)"
    ]
   }
  ],
