Commit cube and pivot concepts

--- a/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
+++ b/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
@@ -1535,7 +1535,21 @@
     }
    },
    "source": [
-    "######Standardization2 - Column Uniformity"
+    "######Standardization2 - Column Uniformity\n",
+    "\n",
+    "| customer_id | gender | dob        | city      |\n",
+    "| ----------- | ------ | ---------- | --------- |\n",
+    "| 1           | Male   | 1990-01-10 | Bangalore |\n",
+    "| 2           | MALE   | 10/01/1990 | bangalore |\n",
+    "| 3           | male   | 1990.01.10 | BLR       |\n",
+    "| 4           | NULL   | 1990-1-10  | Bengaluru |\n",
+    "\n",
+    "| customer_id | gender | dob        | city      |\n",
+    "| ----------- | ------ | ---------- | --------- |\n",
+    "| 1           | MALE   | 1990-01-10 | BANGALORE |\n",
+    "| 2           | MALE   | 1990-01-10 | BANGALORE |\n",
+    "| 3           | MALE   | 1990-01-10 | BANGALORE |\n",
+    "| 4           | NULL   | 1990-01-10 | BANGALORE |\n"
    ]
   },
   {
@@ -3868,7 +3882,31 @@
    },
    "source": [
     "#####5.Analytical Functionalities\n",
-    "Performing analytics/summarization/categorization of data by applying/not by applying windowing functionality."
+    "Functions used for performing some analytical operations on the data in multiple dimensions. We can use windowing or grouping or grouping & aggregation functions to perform analytics/analytical functionalities.<br>\n",
+    "Performing analytics/summarization/categorization of data by applying/not by applying windowing functionality.<br>\n",
+    "\n",
+    "1. Hierarchical/Pattern Analytics (lead & lag, first_value, last_value, cume_dist)\n",
+    "2. Aggregation analytics (grouping & aggregations)\n",
+    "3. Multi dimensional analytics (rollup, cube, pivot)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "073c8ed5-7c4a-4f8b-911c-ef6fdff68581",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "1. Hierarchical/Pattern Analytics (lead & lag, first_value, last_value, cume_dist)"
    ]
   },
   {
@@ -3883,15 +3921,138 @@
      "inputWidgets": {},
      "nuid": "027f2ee4-7da7-46e7-af19-a518fda56c65",
      "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1768227167448}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col\n",
+    "#Comparitive analytics - lead & lag\n",
+    "sk_orderjoinedf=orderjoineddf.withColumn(\"nexttransamt\",lead(\"amt\",1,-1).over(Window.partitionBy(\"custid\").orderBy(asc(\"txndt\")))).withColumn(\"priortransamt\",lag(\"amt\",1,-1).over(Window.partitionBy(\"custid\").orderBy(asc(\"txndt\"))))\n",
+    "#display(sk_orderjoinedf)\n",
+    "\n",
+    "pattern_df=sk_orderjoinedf.withColumn(\"Flag\",\n",
+    "                                      when(col(\"priortransamt\")==-1,\"first transaction\").\\\n",
+    "                                      when(col(\"amt\")>col(\"priortransamt\"),\"increase\").\\\n",
+    "                                      when(col(\"amt\")<col(\"priortransamt\"),\"decrease\").\\\n",
+    "                                      otherwise(\"Same\"))\n",
+    "#display(pattern_df)\n",
+    "\n",
+    "\n",
+    "#Comparitive analytics - first_value and last_value (good to know)\n",
+    "#Cumulative distribution - distribution of data across the partition (good to know)\n",
+    "sk_orderjoinedf=orderjoineddf.withColumn(\"firsttransvalue\",first_value(\"amt\").over(Window.partitionBy(\"custid\").orderBy(asc(\"txndt\")))).withColumn(\"lasttransvalue\",last_value(\"amt\").over(Window.partitionBy(\"custid\").orderBy(desc(\"txndt\")))).withColumn(\"cumedistribution\",cume_dist().over(Window.partitionBy(\"custid\").orderBy(desc(\"txndt\"))))\n",
+    "display(sk_orderjoinedf)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2cfedd62-a68c-4835-92cd-a03bcfa5fb08",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "2. Aggregation analytics (grouping & aggregations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "599b18f0-85d7-49b0-9b57-98993088d702",
+     "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "#Comparitive analytics - lead & lag\n",
-    "sk_orderjoinedf=orderjoineddf.withColumn(\"nexttransamt\",lead(\"amt\",1,0).over(Window.partitionBy(\"custid\").orderBy(asc(\"txndt\")))).withColumn(\"priortransamt\",lag(\"amt\",1,0).over(Window.partitionBy(\"custid\").orderBy(asc(\"txndt\"))))\n",
-    "display(sk_orderjoinedf)"
+    "#Identify the identifier(custid), dimensions(age,profession,txndt,category,product,city,state,spendby), measures(amt) and what metrics (sum,avg,mean,mode,variance...) we needed based on what dimensions (product,spendby).\n",
+    "#Let's calculate the product wise sum(amt) metrics\n",
+    "groupaggdf=orderjoineddf.groupBy(\"product\").agg(sum(\"amt\").alias(\"sumamt\"))\n",
+    "display(groupaggdf)\n",
+    "#Let's calculate the product wise sum(amt) metrics\n",
+    "#my task check here if select works\n",
+    "groupaggdf=orderjoineddf.groupBy(\"product\",\"spendby\").agg(sum(\"amt\").alias(\"sumamt\"),avg(\"amt\").alias(\"AvgAmount\")).orderBy([\"product\",\"sumamt\"],ascending=[True,False])\n",
+    "display(groupaggdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d6186715-4158-4825-86a1-b0eccd4c427b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "3. Multi dimensional analytics (rollup, cube, pivot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1b714aec-bc2d-412d-9eee-0b24d4a9f73d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#rollup - rolled up aggregation at state level and no level\n",
+    "rollupdf=orderjoineddf.rollup(\"state\",\"city\").agg(sum(\"amt\").alias(\"sumamt\"),avg(\"amt\").alias(\"avgamt\")).orderBy(\"state\",\"sumamt\")\n",
+    "display(rollupdf)\n",
+    "\n",
+    "#cube - cubed (all level) aggregation at state level, city level and no level\n",
+    "cubedf=orderjoineddf.cube(\"state\",\"category\").agg(sum(\"amt\").alias(\"sumamt\"),avg(\"amt\").alias(\"avgamt\")).orderBy(\"state\",\"sumamt\")\n",
+    "display(cubedf)\n",
+    "\n",
+    "#cube - cubed (all level) aggregation at state level, city level and no level\n",
+    "cubedf=orderjoineddf.cube(\"state\",\"category\").agg(sum(\"amt\").alias(\"sumamt\"),avg(\"amt\").alias(\"avgamt\")).orderBy(\"state\",\"sumamt\")\n",
+    "display(cubedf)\n",
+    "\n",
+    "#pivot\n",
+    "pivotdf=orderjoineddf.groupBy(\"state\",\"city\").pivot(\"category\").agg(sum(\"amt\").alias(\"sumamt\"),avg(\"amt\").alias(\"avgamt\")).orderBy(\"state\")\n",
+    "display(pivotdf)"
    ]
   }
  ],
