Commit logistic till self join

--- a/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
+++ b/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
@@ -3997,7 +3997,7 @@
     "display(groupaggdf)\n",
     "#Let's calculate the product wise sum(amt) metrics\n",
     "#my task check here if select works\n",
-    "groupaggdf=orderjoineddf.groupBy(\"product\",\"spendby\").agg(sum(\"amt\").alias(\"sumamt\"),avg(\"amt\").alias(\"AvgAmount\")).orderBy([\"product\",\"sumamt\"],ascending=[True,False])\n",
+    "groupaggdf=orderjoineddf.select(\"*\").groupBy(\"product\",\"spendby\").agg(sum(\"amt\").alias(\"sumamt\"),avg(\"amt\").alias(\"AvgAmount\")).orderBy([\"product\",\"sumamt\"],ascending=[True,False])\n",
     "display(groupaggdf)"
    ]
   },
